add: museumArtwork endpoint, edit: assets in dtos
